--- a/notebooks/powerbi.ipynb
+++ b/notebooks/powerbi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "[149 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
      "output_type": "stream",
      "text": [
       "Performing device flow authentication. Please follow the instructions below.\n",
-      "To sign in, use a web browser to open the page https://microsoft.com/devicelogin and enter the code HNU8ECCYN to authenticate.\n",
+      "To sign in, use a web browser to open the page https://microsoft.com/devicelogin and enter the code IZPS299GS to authenticate.\n",
       "\n",
       "Device flow authentication successfully completed.\n",
       "You are now logged in .\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07935fed2f2047f2b28bda82e65d00a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "QuickVisualize()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "p_visualize"
    ]
